MCU drivers/target/.metadata/.plugins/org.eclipse.cdt.ui/stm32f446_drivers.build.log
10:43:56 **** Incremental Build of configuration Debug for project stm32f446_drivers ****
make -j4 all 
arm-none-eabi-gcc "../drivers/src/stm32f446_gpio_driver .c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -I"/home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"drivers/src/stm32f446_gpio_driver .d" -MT"drivers/src/stm32f446_gpio_driver .o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "drivers/src/stm32f446_gpio_driver .o"
arm-none-eabi-gcc "../drivers/src/stm32f446_i2c_driver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -I"/home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"drivers/src/stm32f446_i2c_driver.d" -MT"drivers/src/stm32f446_i2c_driver.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "drivers/src/stm32f446_i2c_driver.o"
arm-none-eabi-gcc "../drivers/src/stm32f446_spi_driver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -I"/home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"drivers/src/stm32f446_spi_driver.d" -MT"drivers/src/stm32f446_spi_driver.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "drivers/src/stm32f446_spi_driver.o"
arm-none-eabi-gcc "../drivers/src/stm32f446_usart_driver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F4 -DSTM32F446RETx -DDEBUG -DNUCLEO_F446RE -c -I../Inc -I"/home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"drivers/src/stm32f446_usart_driver.d" -MT"drivers/src/stm32f446_usart_driver.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "drivers/src/stm32f446_usart_driver.o"
In file included from /home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446.h:680:0,
                 from /home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446_gpio_driver.h:11,
                 from ../drivers/src/stm32f446_gpio_driver .c:8:
/home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446_usart_driver.h:31:1: warning: no semicolon at end of struct or union
 }USART_Handle_t;
 ^
In file included from /home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446.h:680:0,
                 from /home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446_spi_driver.h:11,
                 from ../drivers/src/stm32f446_spi_driver.c:8:
/home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446_usart_driver.h:31:1: warning: no semicolon at end of struct or union
 }USART_Handle_t;
 ^
In file included from /home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446.h:680:0,
                 from /home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446_i2c_driver.h:11,
                 from ../drivers/src/stm32f446_i2c_driver.c:9:
/home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446_usart_driver.h:31:1: warning: no semicolon at end of struct or union
 }USART_Handle_t;
 ^
In file included from ../drivers/src/stm32f446_usart_driver.c:8:0:
/home/robert/Projects/Embedded-C/MCU drivers/target/stm32f446_drivers/drivers/inc/stm32f446_usart_driver.h:31:1: warning: no semicolon at end of struct or union
 }USART_Handle_t;
 ^
../drivers/src/stm32f446_usart_driver.c: In function 'USART_PeriClockControl':
../drivers/src/stm32f446_usart_driver.c:41:4: warning: implicit declaration of function 'USART5_PCLK_EN'; did you mean 'USART2_PCLK_EN'? [-Wimplicit-function-declaration]
    USART5_PCLK_EN();
    ^~~~~~~~~~~~~~
    USART2_PCLK_EN
../drivers/src/stm32f446_i2c_driver.c:718:6: error: redefinition of 'I2C_IRQPriorityConfig'
 void I2C_IRQPriorityConfig(uint8_t IRQNumber, uint32_t IRQPriority){
      ^~~~~~~~~~~~~~~~~~~~~
../drivers/src/stm32f446_i2c_driver.c:137:6: note: previous definition of 'I2C_IRQPriorityConfig' was here
 void I2C_IRQPriorityConfig(uint8_t IRQNumber, uint32_t IRQPriority){
      ^~~~~~~~~~~~~~~~~~~~~
make: *** [drivers/src/subdir.mk:29: drivers/src/stm32f446_i2c_driver.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

10:43:57 Build Failed. 3 errors, 5 warnings. (took 1s.772ms)

